// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepList renders correctly  1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps ewuati22"
  >
    <li
      class="css-ubtlu3-Step ewuati21"
    >
      <div
        class="css-1k74lo7-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="css-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon & sentiment 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.css-1h0t7zq-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps ewuati22"
  >
    <li
      class="css-ubtlu3-Step ewuati21"
    >
      <div
        class="css-1h0t7zq-StyledContainer e11loam60"
      >
        <svg
          class="css-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="css-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps ewuati22"
  >
    <li
      class="css-ubtlu3-Step ewuati21"
    >
      <div
        class="css-1k74lo7-StyledContainer e11loam60"
      >
        <svg
          class="css-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="css-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-g6qori-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.css-1n3x46n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps ewuati22"
  >
    <li
      class="css-g6qori-Step ewuati21"
    >
      <div
        class="css-1n3x46n-StyledContainer e11loam60"
      >
        <svg
          class="css-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.7045 4.15347C17.034 4.4045 17.0976 4.87509 16.8466 5.20457L8.84657 15.7046C8.71541 15.8767 8.51627 15.9838 8.30033 15.9983C8.08439 16.0129 7.87271 15.9334 7.71967 15.7804L3.21967 11.2804C2.92678 10.9875 2.92678 10.5126 3.21967 10.2197C3.51256 9.92682 3.98744 9.92682 4.28033 10.2197L8.17351 14.1129L15.6534 4.29551C15.9045 3.96603 16.3751 3.90243 16.7045 4.15347Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="css-66nq81-StyledDiv ewuati20"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-g6qori-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.css-1n3x46n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="css-1abqgir-Steps ewuati22"
  >
    <li
      class="css-g6qori-Step ewuati21"
    >
      <div
        class="css-1n3x46n-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="css-66nq81-StyledDiv ewuati20"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with small size 1`] = `
<DocumentFragment>
  .css-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.css-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.css-rxjap1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.css-1jkk4vs-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<ul
    class="css-1abqgir-Steps ewuati22"
  >
    <li
      class="css-ubtlu3-Step ewuati21"
    >
      <div
        class="css-rxjap1-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="css-1jkk4vs-StyledDiv ewuati20"
      >
        Item 1 small
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
